Bug 1315353 - Part 1: Fix the wrong image size of border-image-repeat while the content is SVG. r=dbaron